--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,19 +13,19 @@
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526625.md#1" title="【专访】两党人士批评美大选民调失准""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1283442236-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526403.md#1" title="分析：中共为何把官员私藏禁书列为首罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/20201030054323632-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://rmxaqt314.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528852.md#1">田云：美大选欺诈令人震惊 左派为何反川普</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529571.md#1">美军蓝天使 最后一次以“大黄蜂”战机表演</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529154.md#1">习近平突换12名驻外大使 暂停6国公民入境</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529458.md#1">主人睡梦中房屋失火 鹦鹉叫醒他逃生</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528989.md#1">【西岸观察】美国最有争议的两次总统选举</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529291.md#1">香港美国商会低价卖掉在港办公室</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529154.md#1">习近平突换12名驻外大使 暂停6国公民入境</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529458.md#1">主人睡梦中房屋失火 鹦鹉叫醒他逃生</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528989.md#1">【西岸观察】美国最有争议的两次总统选举</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529291.md#1">香港美国商会低价卖掉在港办公室</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529375.md#1">五角大楼驳斥美防长将辞职传闻 “NBC误导”</a><br>
+:clock8: <em>60分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529195.md#1">【拍案惊奇】四州计票仍无果 恶势力反扑川普？</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525522.md#1">蚂蚁中港上市突喊停 业界分析背后恐不简单</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524856.md#1">【独家】内部文件解密美国在华“和平队”</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524572.md#1">蚂蚁被暂停上市 分析指大型集资威胁中共</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524856.md#1">【独家】内部文件解密美国在华“和平队”</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525751.md#1">华为又推新手机 网友：山寨iPhone 12</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526454.md#1">【翻墙必看】美国选民紧盯左派选票欺诈</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,943,972 人
+!共 366,943,042 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
