--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -17,13 +17,12 @@
 <tr><td><h3><a href="https://github.com/addmgv395/djy/blob/master/gb/17/11/16/n9848899.md#1" target="_blank">被拍摄下的“情感” 科学家揭人体能量场奥秘</a><br></h3><a href="https://github.com/addmgv395/djy/blob/master/gb/17/11/16/n9848899.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2017/11/korotkov-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/11/n12542100.md#1" target="_blank">菠菜增强免疫力、补血 营养师分享2道美味料理</a><br></h3>
-<h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/12/n12543082.md#1" target="_blank">【慧聊养生】胜过大长今的女灸学家鲍姑</a><br></h3>
 <h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/12/n12545371.md#1" target="_blank">四大补汤哪个适合你？中医推1碗汤一般人都能喝</a><br></h3>
 <h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/13/n12545631.md#1" target="_blank">2招防空污 远离肺癌、心脏病和中风</a><br></h3>
 <h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/17/n12556081.md#1" target="_blank">凡士林不只保湿 有5大妙用 挑选看1点</a><br></h3>
 <h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/17/n12556324.md#1" target="_blank">坐姿前弯：简单一个动作 拉伸全身后侧肌肉</a><br></h3>
 <h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/17/n12556425.md#1" target="_blank">喉咙痛到吞口水想哭？按2个耳穴速止痛</a><br></h3>
-<h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/18/n12559191.md#1" target="_blank">苹果和奇异果是抗癌二宝  带皮吃更好</a><br></h3>
+<h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/17/n12556573.md#1" target="_blank">中医1茶饮根治喉咙痛！扁桃腺炎、咽喉炎都能救</a><br></h3>
 <h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/18/n12559225.md#1" target="_blank">一次拔牙20颗 医师无医德？牙医的真心话</a><br></h3>
 <h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/19/n12560254.md#1" target="_blank">【慧聊养生】最早疫苗源于中国</a><br></h3>
 <h3><a href="https://github.com/addmgv395/djy/blob/master/gb/20/11/19/n12561618.md#1" target="_blank">治牙周病他糖尿病竟好转 医：都是慢性发炎惹祸</a><br></h3>
